unpackaged/objects/Product2.object
<CustomObject>
  <fields>
    <fullName>Article__c</fullName>
    <externalId>true</externalId>
    <label>Article (SKU)</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>BrandCodeGDW__c</fullName>
    <description>This is the Brand Code from the Global Product Structure in GDW.</description>
    <inlineHelpText>This is the Brand Code from the Global Product Structure in GDW.</inlineHelpText>
    <label>Brand Code GDW</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>BrandDescGDW__c</fullName>
    <description>This is the Brand Description from the Global Product Structure in GDW.</description>
    <inlineHelpText>This is the Brand Description from the Global Product Structure in GDW.</inlineHelpText>
    <label>Brand Desc GDW</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Business_Area_Brand__c</fullName>
    <description>This formula field combines the Busienss Area Code and Brand like  "DI1 - Ankylos". Use this field for grouping in reports etc</description>
    <formula>Business_Area_Code__c  &amp; " - "  &amp;  Brand__c</formula>
    <inlineHelpText>This formula field combines the Busienss Area Code and Brand like  "DI1 - Ankylos". Use this field for grouping in reports etc</inlineHelpText>
    <label>Business Area - Brand</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Business_Area_Category_Brand_HQ__c</fullName>
    <description>Combination of PA - BAC and Name (Primary use for HQ)</description>
    <formula>Business_Area_Code__c &amp; " - " &amp; Product_Category__c &amp; " - " &amp;  Brand__c</formula>
    <label>Business Area - Category - Brand (HQ)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Business_Area_Code__c</fullName>
    <label>Business Area Code</label>
    <length>3</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Business_Area_Description__c</fullName>
    <description>Description corresponding to Business Area Code and Business Area Name.</description>
    <label>Business Area Description</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Business_Area_Name__c</fullName>
    <description>Name corresponding to the Business Area Code.</description>
    <label>Business Area Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CPQ_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this product is used in CPQ Quotes</description>
    <label>CPQ Product</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Company_Code__c</fullName>
    <description>The Company Code as written in the GDW</description>
    <inlineHelpText>The Company Code as written in the GDW</inlineHelpText>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>D_Level1__c</fullName>
    <label>D-Level1</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>D_Level2__c</fullName>
    <label>D-Level2</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>D_Level3__c</fullName>
    <label>D-Level3</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Dashboard_Product__c</fullName>
    <label>Dashboard Product</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Y</fullName>
        </value>
        <value>
          <fullName>N</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ERP_Source_Description__c</fullName>
    <formula>CASE(ERP_Source__c, 
1, "M3", 
2, "AX", 
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Source Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ERP_Source__c</fullName>
    <description>The ERP Source. 1= M3, 2=AX</description>
    <inlineHelpText>The ERP Source. 1= M3, 2=AX</inlineHelpText>
    <label>ERP Source</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>GPP_Code__c</fullName>
    <inlineHelpText>Global Product Platform Code</inlineHelpText>
    <label>GPP Code</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GPP_Desc__c</fullName>
    <inlineHelpText>Global Product Platform Description</inlineHelpText>
    <label>GPP Description</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GPP_Description__c</fullName>
    <description>This field is a concatenation of GPP + GPP Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
    <formula>IF(CONTAINS(RecordType.DeveloperName, "Global"), GPP_Code__c &amp;" - " &amp; GPP_Desc__c, GlobalSKUMapping__r.GPP_Code__c &amp; " - " &amp; GlobalSKUMapping__r.GPP_Desc__c)</formula>
    <label>GPP - Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GdwUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>GDW Unique Key</label>
    <length>42</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>GlobalSKUMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GlobalSKU Mapping</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mapped LocalSKUs</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>ID_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>ID 18</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Legacy_System_ID__c</fullName>
    <label>Legacy System ID</label>
    <length>40</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>List_Price__c</fullName>
    <description>Used for Implants Germany to calculate the gross price on invoices for comparison towards net prices</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>MY_SKU__c</fullName>
    <description>This field is checked when the Product is valid in the users market. The user always have access to all products in SFDC. This field is used to help spotting the valid products in the market</description>
    <formula>IF(UPPER(TEXT($User.Market__c))=UPPER(TEXT(SSIS_ERP_SKU_Market_Mapping__r.Market__c)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is checked when the Product is valid in the users market. The user always have access to all products in SFDC. This field is used to help spotting the valid products in the market</inlineHelpText>
    <label>Valid in my Market?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <description>The Market that the Company Code belongs to</description>
    <formula>TEXT(SSIS_ERP_SKU_Market_Mapping__r.Market__c)</formula>
    <inlineHelpText>The Market that the Company Code belongs to</inlineHelpText>
    <label>Market</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG1_Code__c</fullName>
    <label>Product Group 1 Code</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG1_Desc__c</fullName>
    <label>Product Group 1 Description</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG1_Description__c</fullName>
    <description>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
    <formula>IF(CONTAINS(RecordType.DeveloperName, "Global"), PG1_Code__c &amp;" - " &amp; PG1_Desc__c, GlobalSKUMapping__r.PG1_Code__c &amp; " - " &amp; GlobalSKUMapping__r.PG1_Desc__c)</formula>
    <inlineHelpText>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</inlineHelpText>
    <label>PG1 - Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG2_Code__c</fullName>
    <label>Product Group 2 Code</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG2_Desc__c</fullName>
    <label>Product Group 2 Description</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG2_Description__c</fullName>
    <description>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
    <formula>IF(CONTAINS(RecordType.DeveloperName, "Global"), PG2_Code__c &amp;" - " &amp; PG2_Desc__c, GlobalSKUMapping__r.PG2_Code__c &amp; " - " &amp; GlobalSKUMapping__r.PG2_Desc__c)</formula>
    <inlineHelpText>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</inlineHelpText>
    <label>PG2 - Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG3_Code__c</fullName>
    <label>Product Group 3 Code</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG3_Desc__c</fullName>
    <label>Product Group 3 Description</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PG3_Description__c</fullName>
    <description>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
    <formula>IF(CONTAINS(RecordType.DeveloperName, "Global"), PG3_Code__c &amp;" - " &amp; PG3_Desc__c, GlobalSKUMapping__r.PG3_Code__c &amp; " - " &amp; GlobalSKUMapping__r.PG3_Desc__c)</formula>
    <inlineHelpText>This field is a concatenation of PG1 + PG1 Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</inlineHelpText>
    <label>PG3 - Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductStructure__c</fullName>
    <description>Shows the full product structure of the Product record.</description>
    <formula>SBU_Code__c &amp; IF( ISBLANK(SBU_Name__c),null, " ") &amp; SBU_Name__c &amp; " - " &amp; GPP_Code__c &amp; IF( ISBLANK(GPP_Desc__c),null, " ") &amp; GPP_Desc__c &amp; " - " &amp; PG1_Code__c &amp; IF( ISBLANK(PG1_Desc__c),null, " ") &amp; PG1_Desc__c &amp; " - " &amp; PG2_Code__c &amp; IF( ISBLANK(PG2_Desc__c),null, " ") &amp; PG2_Desc__c &amp; " - " &amp; PG3_Code__c &amp; IF( ISBLANK(PG3_Desc__c),null, " ")  &amp; PG3_Desc__c &amp; " - " &amp; PG4_Code__c &amp; IF( ISBLANK(PG4_Desc__c),null, " ")  &amp; PG4_Desc__c &amp; " - " &amp; Name</formula>
    <inlineHelpText>Shows the full product structure of the Product record.</inlineHelpText>
    <label>Product Structure (HQ)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group_2_Description__c</fullName>
    <description>Shows a concatenation of Product Group 2 and Product Group 2 Description, giving it the same layout as product group 2 on the Sales History object</description>
    <formula>PG2_Code__c &amp; " - " &amp;  PG2_Desc__c</formula>
    <inlineHelpText>Shows a concatenation of Product Group 2 and Product Group 2 Description, giving it the same layout as product group 2 on the Sales History object</inlineHelpText>
    <label>Product Group 2 - Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_Group__c</fullName>
    <label>Product Group OLD</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_HQ__c</fullName>
    <description>Power One field</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product # (HQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Product_group_description__c</fullName>
    <label>Product Group Description</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU_Code__c</fullName>
    <label>SBU Code</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU_Description__c</fullName>
    <description>This field is a concatenation of SBU + SBU Description. Used to display PG Info on all products regardless of SKU type. Used in WAVE, Search Lists, ..etc</description>
    <formula>IF(CONTAINS(RecordType.DeveloperName, "Global"), SBU_Code__c &amp;" - " &amp; SBU_Name__c, GlobalSKUMapping__r.SBU_Code__c &amp; " - " &amp; GlobalSKUMapping__r.SBU_Name__c)</formula>
    <label>SBU - Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU_Name__c</fullName>
    <label>SBU Name</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Product_Category_HQ__c</fullName>
    <label>SIMPLANT Product Category HQ</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SKUKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SKU Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>SKU_Source__c</fullName>
    <description>1: LocalSKU not mapped to GPC
2: Available in the GPC
3: LocalSKU not mapped to GPC but available in Movex</description>
    <inlineHelpText>1: LocalSKU not mapped to GPC
2: Available in the GPC
3: LocalSKU not mapped to GPC but available in Movex</inlineHelpText>
    <label>SKU Source</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SKU_Status__c</fullName>
    <description>1: Active
0: Inactive</description>
    <inlineHelpText>1: Active 
0: Inactive</inlineHelpText>
    <label>SKU Status</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SSIS_ERP_SKU_Market_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSIS: ERP/SKU - Market Mapping</label>
    <referenceTo>SSIS_ERP_SKU_Metadata_Country_Connectio__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Unit_of_Measurement__c</fullName>
    <description>The unit of Measurement</description>
    <inlineHelpText>The unit of Measurement</inlineHelpText>
    <label>Unit of Measurement</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <listViews>
    <fullName>All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Article__c</columns>
    <columns>Brand__c</columns>
    <columns>Company_Code__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <listViews>
    <fullName>Dental_Products</fullName>
    <columns>Article__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PG1_Code__c</columns>
    <columns>PG1_Desc__c</columns>
    <columns>PG3_Code__c</columns>
    <columns>PG3_Desc__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>SBU_Code__c</field>
      <operation>equals</operation>
      <value>I</value>
    </filters>
    <label>Implants Products</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>HQ_Equipment_Products</fullName>
    <columns>SBU_Name__c</columns>
    <columns>Article__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>GPP_Desc__c</columns>
    <columns>PG4_Code__c</columns>
    <columns>PG4_Desc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>GPP_Code__c</field>
      <operation>equals</operation>
      <value>Al,AC,MA,MB,MI,NH,NL,NP,TC,TE,TF,TS</value>
    </filters>
    <label>HQ: Equipment Products</label>
    <language>en_US</language>
    <sharedTo>
      <group>Global_X_SBU_Prospecting</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Japan_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Article__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_group_description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Japan Products</label>
    <language>en_US</language>
    <sharedTo />
  </listViews>
  <recordTypes>
    <active>true</active>
    <fullName>CategoryProduct</fullName>
    <label>Category Product</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>GlobalSKU</fullName>
    <label>Global SKU</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>LocalSKU</fullName>
    <label>Local SKU</label>
  </recordTypes>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>